Add cookie banner
Signed-off-by: Aurel Pop <47039993+popaurel@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@expressive-code/plugin-collapsible-sections": "^0.40.2",
     "@expressive-code/plugin-line-numbers": "^0.40.2",
     "@iconify-json/lucide": "^1.2.26",
+    "@jop-software/astro-cookieconsent": "^3.0.1",
     "@tailwindcss/vite": "^4.0.7",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -46,6 +47,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "typescript": "^5.8.3",
+    "vanilla-cookieconsent": "^3.1.0",
     "wrangler": "^4.28.1"
   },
   "devDependencies": {
