--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "finance",
-  "compatibility_date": "2025-08-10",
+  "compatibility_date": "2025-08-11",
+  "compatibility_flags": [ "nodejs_compat" ],
   "assets": {
     "directory": "./dist"
   }
