--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@astrojs/sitemap": "^3.4.0",
     "@expressive-code/plugin-collapsible-sections": "^0.40.2",
     "@expressive-code/plugin-line-numbers": "^0.40.2",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/roboto": "^5.2.6",
     "@iconify-json/lucide": "^1.2.26",
     "@jop-software/astro-cookieconsent": "^3.0.1",
     "@tailwindcss/vite": "^4.0.7",
@@ -31,10 +33,13 @@
     "astro": "^5.7.13",
     "astro-expressive-code": "^0.40.2",
     "astro-icon": "^1.1.5",
+    "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "patch-package": "^8.0.0",
+    "postcss": "^8.5.6",
     "radix-ui": "^1.3.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -45,7 +50,7 @@
     "remark-emoji": "^5.0.1",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vanilla-cookieconsent": "^3.1.0",
     "wrangler": "^4.28.1"
